# ibm-1130-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  asm-game-25afe163b0ae0b6e.css  build-all.sh  circular_knob-e38d85e24dee418e.css  ibm-1130-emulator-1501b922c1368d52_bg.wasm  ibm-1130-emulator-19baf301e27c39bc_bg.wasm  ibm-1130-emulator-7b29d5752f644b27_bg.wasm  ibm-1130-emulator-9b0dd1feb1634847_bg.wasm  ibm-1130-emulator-a75ebb1db20f6a8.js  ibm-1130-emulator-e2bb37d6f348d5d4_bg.wasm  index.html  keypunch-ecf3dc8d18bea44e.css  serve.sh  tab_container-b45a9f6f77baa474.css
.github/workflows/: pages.yml
components/: Cargo.toml
components/src/components/: circular_knob.rs  console_panel.rs  emergency_stop.rs  header.rs  indicator_lights.rs  keypunch.rs  lamp_test_button.rs  mod.rs  power_switch.rs  printer.rs  program_area.rs  sixteen_bit_panel.rs  tab_container.rs  toggle_switch.rs
crates/punch-card-core/: Cargo.toml
demos/: audio_data.js  printer-demo.html
docs/: ai_agent_instructions.md  architecture.md  console-lights-research.txt  console-lights-schematic.txt  design.md  plan.md  prd.md  status.md
pages/: console_panel-3ab01360fcf87ecb.css  console_panel-c5b5e559980552ca.css  console_panel-f91fd38568c32fdf.css  ibm-1130-emulator-19baf301e27c39bc.js  ibm-1130-emulator-20d678d8b6b3e4b8.js  ibm-1130-emulator-20d678d8b6b3e4b8_bg.wasm  ibm-1130-emulator-2865d141c46785fc_bg.wasm  ibm-1130-emulator-2a8cb5f9fe390899_bg.wasm  ibm-1130-emulator-30d097a27c0a9614_bg.wasm  ibm-1130-emulator-4483e247e9d5ab1b.js  ibm-1130-emulator-4483e247e9d5ab1b_bg.wasm  ibm-1130-emulator-67f84b2aed73b223_bg.wasm  ibm-1130-emulator-91387082780c9bfa.js  ibm-1130-emulator-91387082780c9bfa_bg.wasm  ibm-1130-emulator-aac0bcd863153e40_bg.wasm  ibm-1130-emulator-c3174e9c4ae5caea.js  ibm-1130-emulator-c3174e9c4ae5caea_bg.wasm  ibm-1130-emulator-c9804fb8722c2b86_bg.wasm  ibm-1130-emulator-cbe1c388f722b361_bg.wasm  ibm-1130-emulator-d054a8e7ae8627cc.js  ibm-1130-emulator-d054a8e7ae8627cc_bg.wasm  ibm-1130-emulator-f8a030669cd1ac25.js  ibm-1130-emulator-f8a030669cd1ac25_bg.wasm  index.html  indicator_lights-3b16ecef48bc9292.css  indicator_lights-d490cd606953fc5a.css  layout-32010c411812c0e1.css  layout-a3d258acb3794e07.css  layout-e85a202394386a20.css  printer-d8fea460844dbf05.css  sixteen_bit_panel-d66ef3d0cf69939e.css  toggle_switch-cfb35b289faa7030.css
src/: app.rs  assembler.rs  challenge.rs  lib.rs  wasm.rs
src/cpu/: executor.rs  instruction.rs  mod.rs  (+1 more)
styles/: asm-game.css
(+6 files in other folders)
