[workspace]
members = [".", "components"]
resolver = "2"

[package]
name = "ibm-1130-emulator"
version = "0.1.0"
edition = "2024"
description = "IBM 1130 Assembly Educational Game - Learn 1960s minicomputer programming"
license = "MIT"
repository = "https://github.com/sw-comp-history/ibm-1130-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "2.0"
yew = { version = "0.21", features = ["csr"] }
components = { path = "components" }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Storage",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
